--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ vid/surfing-waves-at-waikiki-beach-4-k-ZHS6WXS.mov
 /vid/surfing-waves-at-waikiki-beach-4-k-ZHS6WXS.mov
 /vid/17_dGVuZXJpZmVfbm9ydGg1Ng.mov 
 /vid/waves-on-the-cliff-9ZHQELJ.mp4
+.env
